用户模块的鉴权控制器完成对jwt与指纹的双重校验的适配